syntax = "proto3";

package chatting.id;

message UserId {
    // Must be a UUID
    string id = 1;
}

message MessageId {
    // Must be a UUID
    string id = 1;
}
